--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="screen">
+            <div id="upper-screen"></div>
+            <div id="lower-screen"></div>
+        </div>
+        <div id="clear">CLEAR</div>
+        <div id="delete">DELETE</div>
+        <div id="7">7</div>
+        <div id="8">8</div>
+        <div id="9">9</div>
+        <div id="/">/</div>
+        <div id="4">4</div>
+        <div id="5">5</div>
+        <div id="6">6</div>
+        <div id="x">x</div>
+        <div id="1">1</div>
+        <div id="2">2</div>
+        <div id="3">3</div>
+        <div id="-">-</div>
+        <div id=".">.</div>
+        <div id="0">0</div>
+        <div id="=">=</div>
+        <div id="+">+</div>
+    </div>
 </body>
 </html>
