--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <body>
     <div id="container">
         <div id="screen">
-            <div id="upper-screen"></div>
-            <div id="lower-screen"></div>
+            <div id="upper-screen">upper screen</div>
+            <div id="lower-screen">lower screen</div>
         </div>
-        <div id="clear">CLEAR</div>
-        <div id="delete">DELETE</div>
-        <div id="7">7</div>
-        <div id="8">8</div>
-        <div id="9">9</div>
-        <div id="/">/</div>
-        <div id="4">4</div>
-        <div id="5">5</div>
-        <div id="6">6</div>
-        <div id="x">x</div>
-        <div id="1">1</div>
-        <div id="2">2</div>
-        <div id="3">3</div>
-        <div id="-">-</div>
-        <div id=".">.</div>
-        <div id="0">0</div>
-        <div id="=">=</div>
-        <div id="+">+</div>
+        <div class="button" id="clear">CLEAR</div>
+        <div class="button" id="delete">DELETE</div>
+        <div class="button" id="7">7</div>
+        <div class="button" id="8">8</div>
+        <div class="button" id="9">9</div>
+        <div class="button" id="/">÷</div>
+        <div class="button" id="4">4</div>
+        <div class="button" id="5">5</div>
+        <div class="button" id="6">6</div>
+        <div class="button" id="*">×</div>
+        <div class="button" id="1">1</div>
+        <div class="button" id="2">2</div>
+        <div class="button" id="3">3</div>
+        <div class="button" id="-">–</div>
+        <div class="button" id=".">.</div>
+        <div class="button" id="0">0</div>
+        <div class="button" id="=">=</div>
+        <div class="button" id="+">+</div>
     </div>
 </body>
 </html>
