--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <body>
     <div id="container">
         <div id="screen">
-            <div id="upper-screen">upper screen</div>
-            <div id="lower-screen">lower screen</div>
+            <div id="upper-screen"></div>
+            <div id="lower-screen"></div>
         </div>
         <div class="button" id="clear">CLEAR</div>
         <div class="button" id="delete">DELETE</div>
-        <div class="button" id="7 ">7</div>
-        <div class="button" id="8">8</div>
-        <div class="button" id="9">9</div>
-        <div class="button" id=" / ">÷</div>
-        <div class="button" id="4">4</div>
-        <div class="button" id="5">5</div>
-        <div class="button" id="6">6</div>
-        <div class="button" id=" * ">×</div>
-        <div class="button" id="1">1</div>
-        <div class="button" id="2">2</div>
-        <div class="button" id="3">3</div>
-        <div class="button" id=" - ">–</div>
+        <div class="button digit" id="7">7</div>
+        <div class="button digit" id="8">8</div>
+        <div class="button digit" id="9">9</div>
+        <div class="button sign" id="/">÷</div>
+        <div class="button digit" id="4">4</div>
+        <div class="button digit" id="5">5</div>
+        <div class="button digit" id="6">6</div>
+        <div class="button sign" id="*">×</div>
+        <div class="button digit" id="1">1</div>
+        <div class="button digit" id="2">2</div>
+        <div class="button digit" id="3">3</div>
+        <div class="button sign" id="-">–</div>
         <div class="button" id=".">.</div>
-        <div class="button" id="0">0</div>
+        <div class="button digit" id="0">0</div>
         <div class="button" id="=">=</div>
-        <div class="button" id=" + ">+</div>
+        <div class="button sign" id=" + ">+</div>
     </div>
 </body>
 </html>
